--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>tr.gov.tuik.ejb</groupId>
     <artifactId>arquillian-example</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,8 +39,15 @@
             <artifactId>arquillian-junit-container</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
+    <!-- Profiles -->
     <profiles>
         <!-- JBoss WELD -->
         <profile>
